이미지 업로드, 뷰

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,22 @@
     <p th:text="${message}"></p>
     <section>
         <form th:action="@{/}" method="post" th:object="${form}" enctype="multipart/form-data">
+            <label>제목 : <input th:field="*{title}"> </label>
+            <label>내용 : <textarea th:field="*{content}"></textarea> </label>
             <label>파일 : <input type="file" th:field="*{file}" ></label>
             <button>등록</button>
         </form>
     </section>
-    <section th:if="${image}">
-        <img th:src="@{/file/{filename}(filename=${image})}" th:width="240" th:alt="이미지">
+    <section>
+        <div th:each="el : ${list}">
+            <h3 th:text="${el.title}"></h3>
+            <h4 th:text="${el.createdAt}"></h4>
+            <p th:text="${el.content}"></p>
+            <img th:src="@{/file/{filename}(filename=${el.filename})}" th:width="240" th:alt="이미지">
+        </div>
     </section>
+<!--    <section th:if="${image}">-->
+<!--        <img th:src="@{/file/{filename}(filename=${image})}" th:width="240" th:alt="이미지">-->
+<!--    </section>-->
 </body>
 </html>
