--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,9 @@
 <body>
     <p th:text="${message}"></p>
     <section>
-        <form th:action="@{/}" method="post" th:object="${form}" enctype="multipart/form-data">
-            <label>제목 : <input th:field="*{title}"> </label>
-            <label>내용 : <textarea th:field="*{content}"></textarea> </label>
+        <form th:action="@{/}" method="post" th:object="${form}" enctype="multipart/form-data" style="display: flex; flex-direction: column; gap: 1rem;">
+            <label>제목 : <input th:field="*{title}"></label>
+            <label>내용 : <textarea th:field="*{content}"></textarea></label>
             <label>파일 : <input type="file" th:field="*{file}" ></label>
             <button>등록</button>
         </form>
